--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,8 +1,43 @@
-.product{
+.product {
   width: 300px;
   height: 510px;
+  border: 1px solid #95a0a7;
+  border-radius: 8px;
+  position: relative;
 }
-.product img{
+.product img {
   width: 286px;
   height: 286px;
+  margin: 7px;
+  border-radius: 8px;
+}
+.product-info {
+  margin: 14px;
+}
+.product-name {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  letter-spacing: 0.00153em;
+  color: #0e161a;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.product-info h3,
+.product-info p {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.btn-cart {
+  border-radius: 0px 0px 8px 8px;
+  border: 1px solid #95a0a7;
+  background: #ffe0b3;
+  width: 100%;
+  height: auto;
+  position: absolute;
+  bottom: 0;
+}
+.btn-cart:hover{
+  background-color: blue;
 }
